fix tabs on mobile and updated buttons in sideframe

--- a/djangocms_admin_style/sass/components/_content.scss
+++ b/djangocms_admin_style/sass/components/_content.scss
@@ -43,6 +43,9 @@ body {
     .module {
         padding: 0;
     }
+    .submit-row {
+        padding: 20px 25px !important;
+    }
 }
 #sitemap {
     clear: both;
